# instructor-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  archive.py  mkdocs.yml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: concepts.md  index.md  types.md
docs/examples/getting-started/: Cargo.toml
examples/function-calling/: Cargo.toml
examples/function-calling/src/: main.rs
examples/getting-started/: Cargo.toml
examples/getting-started/src/: main.rs
instruct-macros/: CHANGELOG.md  Cargo.toml  README.md
instruct-macros-types/: CHANGELOG.md  Cargo.toml  README.md
instruct-macros-types/src/: lib.rs
instruct-macros/src/: lib.rs
instruct-macros/src/helpers/: parameters.rs
instruct-macros/tests/: integration_test.rs  test_option.rs  test_vec.rs
instruct_model/: Cargo.toml
instruct_model/src/: lib.rs
instruct_model_derive/: Cargo.toml
instruct_model_derive/src/: lib.rs
instructor/: CHANGELOG.md  Cargo.toml
instructor/src/: instructor.rs  lib.rs  main.rs  parse.rs
instructor/src/helpers/: mod.rs  response_model.rs
instructor/tests/: test_option.rs  test_parsing.rs  test_retries.rs  test_structs.rs  test_vec.rs
instructor_rs/: Cargo.toml
instructor_rs/examples/: readme.rs  simple.rs  weather.rs
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
