[package]
name = "instruct-macros-types"
version = "0.1.7"
edition = "2021"
authors = ["Ivan Leo <ivanleomk@gmail.com>"]
description = "Instructor Macro Types are a collection of simple types that we export to work with the instruct-macros crate"
readme = "README.md"
changelog = "CHANGELOG.md"
homepage = "https://rust.useinstructor.com"
repository = "https://github.com/instructor-ai/instructor-rs"
license = "MIT OR Apache-2.0"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "instruct_macros_types"
path = "src/lib.rs"
