[package]
name = "instruct-macros"
version = "0.1.0"
edition = "2018"
authors = ["Ivan Leo <ivan@jxnl.co>", "Jason Liu"]
description = "Instructor Macros are a collection of simple macros that we're using in Instructor-AI"
readme = "@README.md"
homepage = "https://rust.useinstructor.com"
repository = "https://github.com/instructor-ai/instructor-rs"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dependencies.quote]
version = "1.0"

[lib]
proc-macro = true
