[package]
name = "instruct-macros"
version = "0.1.7"
edition = "2018"
authors = ["Ivan Leo <ivanleomk@gmail.com>"]
description = "instruct-macros are a collection of simple macros that we're using in Instructor-AI to generate json schema from Serde Objects"
readme = "README.md"
license = "MIT OR Apache-2.0"

[package.metadata]
changelog = "CHANGELOG.md"

homepage = "https://rust.useinstructor.com"
repository = "https://github.com/instructor-ai/instructor-rs"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
instruct-macros-types = { path = "../instruct-macros-types", version = "0.*" }
proc-macro2 = "1.0.86"

[dependencies.syn]
version = "2.0.68"
features = ["full"]

[dependencies.quote]
version = "1.0"

[lib]
proc-macro = true
