[package]
name = "instruct_model"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
instruct_model_derive = { path = "../instruct_model_derive" }
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }