[package]
name = "instructor"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Leo <ivan@jxnl.co>", "Jason Liu"]
description = "Instructor AI is a simple crate that allows for users to do validated structured outputs"
readme = "../../README.md"
homepage = "https://rust.useinstructor.com"
repository = "https://github.com/instructor-ai/instructor-rs"
license = "MIT OR Apache-2.0"


[dependencies]
instruct-macros = { path = "../instruct-macros", version = "0.1.0" }
openai-api-rs = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"
