[package]
name = "instructor-rs"
version = "0.0.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
async-trait = "0.1.80"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
quote = "1.0.36"
syn = "2.0.67"
instruct_model = { path = "../instruct_model" }