[package]
name = "function-calling"
version = "0.1.0"
edition = "2021"

[dependencies]
instructor-ai = { path = "../../instructor" }
instruct-macros = { path = "../../instruct-macros" }
instruct-macros-types = { path = "../../instruct-macros-types" }
openai-api-rs = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
