[package]
name = "getting-started"
version = "0.1.0"
edition = "2021"

[dependencies]
instructor-ai = { path = "../../instructor" }
instruct-macros = { path = "../../instruct-macros" }
openai-api-rs = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
instruct-macros-types = { path = "../../instruct-macros-types" }
